--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="profile">
             <img class="profilepic" src="images/circle-cropped (2).png" alt="Sanket-profilepic">
             <h2>Hello.</h2>
-            <p class="intro">I am first year student pursuing my btech from IIIT Guwahati. I love to
+            <p class="intro">I am second year student pursuing my btech from IIIT Guwahati. I love to
                 do photography and also writting jokes. </p>
         </div>
         <hr>
@@ -44,7 +44,7 @@
             <div class="skill-row">
                 <img class="firstskill" src="images/computer.png" alt="">
                 <h3>Coding</h3>
-                <p class="FSkillDesc">I have acquired my skills in c/c++, java, html & css. I also have intrest in development and
+                <p class="FSkillDesc">I have acquired my skills in c/c++, java, html & css. I also have interest in development and
                     data structure and algorithm. </p>
             </div>
             <div class="skill-row">
